# Joint-Embedding-Image-Retriever

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
Notebooks/: full_pipeline.ipynb
config/: settings.py
scripts/: index_images.py  update_metadata.py
src/models/: ijepa.py  multi_head_attention.py  multilayer_perceptron.py  patch_embedding.py  transformer_block.py
src/processing/: embedder.py  model.py
src/search/: embedder.py  faiss_indexer.py  pinecone_indexer.py
tests/: query_image.py
utils/: saving_loading_util.py
